fix(alignment) : updates text alignment to left for labels in pipelines/summary screen

--- a/src/app/launcher/import-app/project-summary-importapp-step/project-summary-importapp-step.component.less
+++ b/src/app/launcher/import-app/project-summary-importapp-step/project-summary-importapp-step.component.less
@@ -2,6 +2,9 @@
 
 .f8launcher {
   &-section-project-summary {
+    .control-label {
+      text-align: left;
+    }
     .f8launcher-pipeline-stages {
       margin-left: 0;
     }
