--- a/src/app/launcher/import-app/release-strategy-importapp-step/release-strategy-importapp-step.component.less
+++ b/src/app/launcher/import-app/release-strategy-importapp-step/release-strategy-importapp-step.component.less
@@ -3,6 +3,9 @@
 
 .f8launcher {
   &-section-release-strategy {
+    .control-label {
+      text-align: left;
+    }
     .card-pf {
       &-heading {
         display: inline-flex;
